更新run.sh